--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -5,6 +5,7 @@ categories: Categories
 tags: Tags
 archive: Archive
 self_regulation: Self Regulation
+cognition: Cognition
 book_notes: Reading Notes
 links: Links
 about: About
