--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -7,7 +7,7 @@ fe_nav: FENav
 archive: Archive
 self_regulation: Self Regulation
 cognition: Cognition
-book_notes: Reading Notes
+gitbook: GitBook
 links: Links
 about: About
 recent: Recent
