--- a/themes/maupassant/languages/zh-CN.yml
+++ b/themes/maupassant/languages/zh-CN.yml
@@ -7,7 +7,7 @@ fe_nav: 前端导航
 archive: 全部文章
 self_regulation: 自律打卡
 cognition: 认知
-book_notes: 读书笔记
+gitbook: GitBook
 links: 链接
 about: 关于
 recent: 最近文章
