--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -24,6 +24,7 @@ Readmore: Read More
 belongsto: Categorized in
 contents: Contents
 shareto: Share
+backtohome: BackToHomePage
 Discuss: Discuss
 Comment: Comment
 Hits: Hits
