--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -23,6 +23,7 @@ recent_comments: Recent Comments
 Readmore: Read More
 belongsto: Categorized in
 contents: Contents
+cognition: Cognition/Inputing
 shareto: Share
 backtohome: BackToHomePage
 Discuss: Discuss
