--- a/themes/maupassant/languages/zh-CN.yml
+++ b/themes/maupassant/languages/zh-CN.yml
@@ -6,7 +6,7 @@ tags: 标签
 fe_nav: 前端导航
 archive: 全部文章
 self_regulation: 自律打卡
-cognition: 认知
+cognition: 认知/输入
 gitbook: GitBook
 links: 链接
 about: 关于
