--- a/source/_posts/360fe_02_css.md
+++ b/source/_posts/360fe_02_css.md
@@ -1,10 +1,8 @@
 ---
 title: 360FED课程——CSS
 categories:
-    - css # 一级分类
+    - CSS # 一级分类
 tags:
-    - 360fed
-    - css
 date: 2018-09-07
 description: 大佬为什么是大佬？
 toc: 1
