从emojipedia.org丰富全站emoji

--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -3,26 +3,26 @@ blog: Blog
 albums: Albums
 categories: Categories
 tags: Tags
-fe_nav: FENav
-archive: Archive
+fe_nav: 👍FENav
+archive: 📪Archive
 self_regulation: Self Regulation
 gitbook: GitBook
 links: Links
-about: About
+about: 🥰About
 recent: Recent
 next: Next
 previous: Previous
 notitle: No Title
 blogroll: Links
 history: History
-rss: RSS
+rss: 📅RSS
 guestbook: Guestbook
-home: Home
+home: 🏠Home
 recent_comments: Recent Comments
 Readmore: Read More
 belongsto: Categorized in
 contents: Contents
-cognition: Cognition/Inputing
+cognition: 👀Cognition/Inputing
 shareto: Share
 backtohome: BackToHomePage
 Discuss: Discuss
