--- a/themes/maupassant/languages/zh-CN.yml
+++ b/themes/maupassant/languages/zh-CN.yml
@@ -3,22 +3,22 @@ blog: 博客
 albums: 相册
 categories: 分类
 tags: 标签
-fe_nav: 前端导航
-archive: 全部文章
+fe_nav: 👍前端导航
+archive: 📪全部文章
 self_regulation: 自律打卡
-cognition: 认知/输入
+cognition: 👀认知/输入
 gitbook: GitBook
 links: 链接
-about: 关于
+about: 🥰关于
 recent: 最近文章
 next: 下一页
 previous: 上一页
 notitle: 无题
 blogroll: 友情链接
 history: 历史
-rss: 订阅
+rss: 📅RSS订阅
 guestbook: 留言
-home: 首页
+home: 🏠首页
 recent_comments: 最近评论
 Readmore: 阅读全文
 belongsto: 分类于
