--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -20,6 +20,7 @@ guestbook: Guestbook
 home: 🏠Home
 recent_comments: Recent Comments
 Readmore: Read More
+apps: 🔨Apps
 belongsto: Categorized in
 contents: Contents
 cognition: 👀Cognition/Inputing
