--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -35,3 +35,4 @@ copyright_declare_prefix: "Copyright Declaration: "
 copyright_default_text: "The author owns the copyright. Please indicate the source reproduced!"
 word_cnt: Words
 read_time: Minutes
+comment: 🤟Comments
