--- a/source/_source/自卑与超越.md
+++ b/source/_source/自卑与超越.md
@@ -1,7 +1,7 @@
 ---
 title: 《自卑与超越》：xx
 categories:
-    - 01 课外输入|我读过的书们 # 一级分类
+  - 01 课外输入|我读过的书们 # 一级分类
 tags:
 date: 2020-xx-xx
 description: xx
@@ -39,9 +39,60 @@ top: 0
 
 <center><small>以下是正文，未完待续..</small></center>
 
-## xx标题
+## 生活的意义到底是什么
 
-> xx引用
+职业、交际和两性
+
+> 1、我与地球：我们生活在地球上，依靠地球所提供的资源生存，除此之外别无选择。
+
+2、我与他人/种族：任何人都是人类族系的一员，每个人必然要与他人发生关系。
+
+3、我和她：这一问题涉及爱情和婚姻。人类有两种性别，男和女。任何人的一生都无法避开爱情和婚姻这一问题。
+
+> 1、在地球的有限资源限制下，为了永存，我们应该如何工作？
+
+2、为了与人合作，共同发展，我们应该获得怎样的定位和身份？
+
+3、面对“人有男女”和“人类延续依赖于爱与婚姻”这一事实，我们应该如何调整自我？
+
+所以，个体心理学认为人类的所有问题都可以归于职业、交际和两性这三个问题。
+
+比如，一个人完全没有爱情，生活遭遇挫折，在工作上也表现得平平庸庸，并且不善交际，朋友很少，他觉得与同伴交往是非常痛苦的事情。那么生活对于他来说就是痛苦而危险的事。
+
+而如果一个人交友广泛，人脉很广，事业有成，拥有甜蜜的爱情和幸福的生活。那么我们可以断定，他的生活是丰富的，是充满创造性的。
+
+所以，作者认为，生命的意义在于乐于关注他人，渴望成为社会大家庭一员，梦想着为人类和社会贡献自己的力量。
+
+著名国学大师季羡林在望九之年写过一篇文章，叫《人生的意义与价值》，在文章的最后，他是这么说的：
+
+如果人生真有意义与价值的话，其意义与价值就在于对人类发展的承上启下，承前启后的责任感。
+古往今来，但凡人们认为具有“生命意义”的人或事，都离不开对他人和社会的贡献。那些赋予人生以个人意义的人，他们的人生就此走过，没有留下一丝痕迹。
+
+因此作者说：
+
+个人意义没有任何价值，真正的生命意义存在于个体与他人的交互作用中。每个人都希望自己变得重要、有价值，但如若不能搞懂个人的成就建立在对他人做出贡献的基础之上，那就太容易走上歧途。
+至此我们就能理解前面的话了，在努力追求优越感的过程中，只有那些为了他人的利益而前进的人和为了社会的发展而奋斗的人，才是能够超越生活，从而顺利获得优越感的人。
+
+以他人利益为重，那我们自己的利益怎么办？要回答这个问题，我们需要理解个体与社会的关系。
+
+## 早期记忆/童年 对一个人的影响有多大
+
+> 一个人的价值观，世界观都和经历有关，所有的经历造就了现在的你，你的所有需求，你的所有期望，都是曾经你经历的没有得到，所以你现在渴望得到。
+> 没有了解一个人的童年,是不会了解他的现在的。
+
+## 自卑感&优越感
+
+> 我们每个人都有不同程度的自卑感，因为我们都想让自己更优秀，让自己过更好的生活。自卑感的存在并不是一件坏事，因为它激励了人不断追求卓越，克服自身的障碍，在有限的生命空间内发挥出最大的价值。
+
+## 家庭
+
+> 婚姻是一种合作关系，所以两个人都不应该试图驾驭对方。
+
+自卑情结
+
+-
+
+> xx 引用
 
 xx
 
