refactor friend link

--- a/themes/maupassant/languages/en.yml
+++ b/themes/maupassant/languages/en.yml
@@ -24,6 +24,7 @@ apps: 🔨Apps
 belongsto: Categorized in
 contents: Contents
 cognition: 👀Cognition/Inputing
+friends: 👫Friends
 shareto: Share
 backtohome: BackToHomePage
 Discuss: Discuss
