--- a/source/_drafts/自卑与超越.md
+++ b/source/_drafts/自卑与超越.md
@@ -1,10 +1,11 @@
 ---
-title: 《自卑与超越》：xx
+title: 《自卑与超越》：一本对自我的答疑书
 categories:
   - 02阅读 | 我的课外书笔记 # 一级分类
 tags:
-date: 2020-xx-xx
-description: xx
+date: 2020-10-30
+description: 我为什么是我
+status: Work in Progress
 toc: 1
 top: 0
 ---
