--- a/source/_posts/monthly_1_2021_01.md
+++ b/source/_posts/monthly_1_2021_01.md
@@ -1,10 +1,10 @@
 ---
-title: 【月刊#1】2021.01
+title: 【月刊#1】2021.02
 categories:
     - 00月刊
 tags:
 date: 2021-02-01
-description: 优质信息分享
+description: 推荐文章、优质信息源、学习资源、流量积累、看看机会
 status: Done
 toc: 1
 top: 0
