--- a/source/_posts/2021_mid.md
+++ b/source/_posts/2021_mid.md
@@ -1,12 +1,12 @@
 ---
-title: 简短的 年中总结 和 近期动态
+title: 简短的年中总结
 categories:
   - 01关于
 tags:
 date: 2021-06-25
 description: 6月底了，复盘了一下上半年做的事情，对下半年的计划略作调整
-toc: 0
-top: 1
+toc: 1
+top: 0
 status: Done
 img: 
 ---
