--- a/source/_posts/monthly_5_2021_07.md
+++ b/source/_posts/monthly_5_2021_07.md
@@ -4,7 +4,7 @@ categories:
     - 00月刊
 tags:
 date: 2021-07-01
-description: 信息流管理
+description: 信息流管理、话题推荐、开发资源、Chrome图片工具
 status: Done
 toc: 1
 top: 0
