--- a/source/_posts/360fe_02_css.md
+++ b/source/_posts/360fe_02_css.md
@@ -1,7 +1,7 @@
 ---
 title: 【360FED课程】——CSS
 categories:
-    - 10技术 | CSS # 一级分类
+    - 10技术 | 前端 # 一级分类
 tags:
 date: 2018-09-07
 description: 大佬为什么是大佬？
